--- a/src/components/Category/Category.module.css
+++ b/src/components/Category/Category.module.css
@@ -4,6 +4,9 @@
   border: 1px solid #ddd;
   border-radius: 5px;
   background-color: #f9f9f9;
+  opacity: 1;
+  transition: opacity 0.01s, transform 0.1s ease-in-out;
+  transform: translateY(var(--hover-offset));
 }
 
 .categoryTitle {
@@ -12,5 +15,14 @@
   margin-bottom: 5px;
 }
 
-.itemsList {
+.dragging {
+  opacity: 0;
 }
+
+/* .hovering-up {
+  transform: translateY(var(--hover-offset));
+}
+
+.hovering-down {
+  transform: translateY(calc(-1 * var(--hover-offset)));
+} */
